added stars and wave animation

--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -21,8 +21,10 @@ html {
 body {
 	font-family: 'Mountains of Christmas', cursive;
 	color: cornsilk;
-	background-color: #de2f32;
+	// background-color: #de2f32;
+	background-color: red;
 	padding-top: 1px;
+	position: relative;
 }
 
 .title {
