--- a/scss/modules/_year.scss
+++ b/scss/modules/_year.scss
@@ -6,7 +6,7 @@
     height: 125px;
     line-height: 110px;
     color: transparent;
-    background: url('../../images/wave.png') repeat-x;
+    background: url('../images/wave.png') repeat-x;
     background-size: 200px 100px;
     background-clip: text;
     -webkit-background-clip: text;
